<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello, application is running!</string>
    <string name="app_name">Password Manager</string>
    <color name="blue">#0000FF</color>
    <string name="text_pass">Textové heslo</string>
    <string name="graph_pass">Grafické heslo</string>
    <string name="both_pass">Obě hesla</string>
    <string name="question_mark">\?</string>
    <string name="desc">Default description</string>
    <string name="ok">Aha</string>
    <string name="info_text_pass">Toto je testovy heslo, vite co je testovy heslo? to je testovy heslo, heslo s textem v kterym je text a je ho tam hodne</string>
    <string name="info_graph_pass">Toto je graficky heslo typico!</string>
    <string name="info_both_pass">Todle zmackni kdyz budes chtit pouzit obe hesla neasi</string>
    <string name="error">We apologize, error occured!</string>
    <string name="confirm">Potvrdit</string>
    <string name="pass_input">Zadejte heslo</string>
    <string name="pass_input_again">Zadejte znova heslo pro kontrolu</string>
    <string name="textpass_alert">Musíte zadat heslo!</string>
    <string name="pass_input_new">Zadejte nové heslo</string>
    <string name="logged">You are logged in!</string>
    <string name="textpass_notmatch">Hesla neslouhlasí!</string>

</resources>