<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.02" >



    <TextView
        android:id="@+id/main_helloText"
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/main_midText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/main_helloText"
        android:layout_marginTop="57dp"
        android:text="" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
           <Button
                android:id="@+id/main_textPass"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:onClick="buttonClicked"
                android:text="@string/text_pass" />

            <ImageView
                android:id="@+id/main_textPassInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/desc"
                android:onClick="infoClicked"
                android:src="@drawable/q_mark" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/main_graphPass"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:onClick="buttonClicked"
                android:text="@string/graph_pass" />

            <ImageView
                android:id="@+id/main_graphPassInfo"
                android:contentDescription="@string/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="infoClicked"
                android:src="@drawable/q_mark" />
        </LinearLayout>

		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/main_bothPass"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:onClick="buttonClicked"
                android:text="@string/both_pass" />

            <ImageView
                android:id="@+id/main_bothPassInfo"
                android:contentDescription="@string/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="infoClicked"
                android:src="@drawable/q_mark" />
        </LinearLayout>
	
    </LinearLayout>

</RelativeLayout>